--- a/DevicesTester/DeviceTesterUI/Views/DeviceFormView.xaml
+++ b/DevicesTester/DeviceTesterUI/Views/DeviceFormView.xaml
@@ -2,9 +2,11 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DeviceTesterUI.Helpers"
+             xmlns:animation="clr-namespace:DeviceTesterUI.Animations"
              xmlns:conv="clr-namespace:DeviceTesterUI.Converters"
              Background="White">
     <UserControl.Resources>
+        <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conv:BoolToBrushConverter x:Key="BoolToBrushConverter"/>
         <conv:BooleanNegationConverter x:Key="BooleanNegationConverter"/>
 
@@ -22,19 +24,39 @@
         <!-- Style for TextBoxes to use the template -->
         <Style TargetType="TextBox">
             <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorTemplate}"/>
-            
+
         </Style>
 
         <!-- Style for PasswordBox -->
         <Style TargetType="PasswordBox">
             <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorTemplate}"/>
-       
+
         </Style>
 
         <Style TargetType="ComboBox">
             <Setter Property="Validation.ErrorTemplate" Value="{StaticResource ValidationErrorTemplate}"/>
             <Setter Property="IsEditable" Value="False"/>
         </Style>
+
+        <Style TargetType="ComboBoxItem">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="ComboBoxItem">
+                        <Border x:Name="Bd"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        Padding="{TemplateBinding Padding}">
+                            <ContentPresenter 
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Center"
+                        RecognizesAccessKey="True" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </UserControl.Resources>
 
     <Grid Margin="10" 
@@ -53,13 +75,22 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <!-- Row 1: Agent & IP Address -->
+        <!-- Row 1: Agent & Name -->
         <StackPanel Grid.Row="0" Grid.Column="0" Margin="0,10,10,0">
             <Label Content="Agent*" FontSize="11"/>
             <ComboBox Height="25" FontSize="11"
                       ItemsSource="{Binding Form.AvailableAgents}"
                       SelectedItem="{Binding Form.EditingDevice.Agent, Mode=TwoWay}"
                       VerticalContentAlignment="Center"/>
+        </StackPanel>
+        <StackPanel Grid.Row="0" Grid.Column="1" Margin="0,10,0,0">
+            <Label Content="Name*" FontSize="11"/>
+            <TextBox Height="25" FontSize="11"
+             Text="{Binding Form.EditingDevice.DeviceName, Mode=TwoWay,
+                            UpdateSourceTrigger=PropertyChanged,
+                            ValidatesOnDataErrors=True,
+                            NotifyOnValidationError=True }"
+             VerticalContentAlignment="Center"/>
         </StackPanel>
 
         <!-- Row 2: IP Address & Port -->
@@ -143,18 +174,36 @@
            FontSize="12" 
            FontWeight="Bold"
            Margin="0,10,0,10"
-           TextWrapping="Wrap"/>
-        
+           TextWrapping="Wrap"
+                   />
+
         <!-- Row 7: Save Button -->
         <StackPanel Grid.Row="6" Grid.Column="0" Orientation="Horizontal" Margin="0,45,10,0" >
             <Button Content="Save" Margin="0,0,10,0"
             
             Height="30" Width="100"
             Command="{Binding SaveCommand}"/>
-    
+
             <Button Content="Clear" 
            Command="{Binding ClearCommand}"
             Height="30" Width="100"/>
         </StackPanel>
+
+
+        <!-- Overlay LoadingSpinner -->
+        <animation:LoadingSpinner 
+               Grid.RowSpan="7"
+                Grid.ColumnSpan="2"
+              SpinnerSize="60"
+              StrokeThickness="7"
+              ArcBrush="#424242"
+              BackgroundBrush="#33000000"
+              ArcLength="80"
+              RotationDuration="0:0:1"
+              HorizontalAlignment="Center"
+              VerticalAlignment="Center"
+             Visibility="{Binding DataContext.IsDeviceFormOnlyBusy, 
+            RelativeSource={RelativeSource AncestorType=UserControl}, 
+            Converter={StaticResource BoolToVisibilityConverter}}"/>
     </Grid>
 </UserControl>
