--- a/DevicesTester/DeviceTesterUI/Views/DeviceListView.xaml
+++ b/DevicesTester/DeviceTesterUI/Views/DeviceListView.xaml
@@ -2,14 +2,20 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DeviceTesterUI.Animations"
+             xmlns:helpers="clr-namespace:DeviceTesterUI.Helpers"
              xmlns:conv="clr-namespace:DeviceTesterUI.Converters"
-             Background="White">
+             Background="White"
+             Unloaded="UserControl_Unloaded">
     <UserControl.Resources>
         <conv:BoolToBrushConverter x:Key="BoolToBrushConverter"/>
         <conv:BooleanNegationConverter x:Key="BooleanNegationConverter"/>
     </UserControl.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
         <DataGrid x:Name="DeviceDataGrid"
+                  Grid.Row="0"
           ItemsSource="{Binding List.Devices}"
           SelectedItem="{Binding List.SelectedDevice, Mode=TwoWay}"
           AutoGenerateColumns="False"
@@ -116,5 +122,11 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+
+        <!--Toaster boilerplate-->
+        <helpers:ToastNotification x:Name="Toast"
+                             Grid.RowSpan="1"
+                             HorizontalAlignment="Right"
+                             VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
