--- a/DevicesTester/DeviceTesterUI/Views/DeviceDetailsView.xaml
+++ b/DevicesTester/DeviceTesterUI/Views/DeviceDetailsView.xaml
@@ -2,11 +2,13 @@
     x:Class="DeviceTesterUI.Views.DeviceDetailsView" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
+    xmlns:helpers="clr-namespace:DeviceTesterUI.Helpers"
     xmlns:local="clr-namespace:DeviceTesterUI.Animations"
     xmlns:conv="clr-namespace:DeviceTesterUI.Converters"
     Background="White" 
     HorizontalAlignment="Stretch" 
-    VerticalAlignment="Stretch">
+    VerticalAlignment="Stretch"
+    Unloaded="UserControl_Unloaded">
     <UserControl.Resources>
         <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
     </UserControl.Resources>
@@ -79,5 +81,11 @@
                              Converter={StaticResource BoolToVisibilityConverter}}"/>
 
         </Grid>
+
+        <!--Toaster boilerplate-->
+        <helpers:ToastNotification x:Name="Toast"
+                     Grid.RowSpan="2"
+                     HorizontalAlignment="Right"
+                     VerticalAlignment="Top"/>
     </Grid>
 </UserControl>
