--- a/DevicesTester/DeviceTesterUI/Windows/ResourceInputWindow.xaml
+++ b/DevicesTester/DeviceTesterUI/Windows/ResourceInputWindow.xaml
@@ -32,8 +32,8 @@
 
         <!-- Buttons -->
         <StackPanel Grid.Row="4" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="Cancel" Width="80" Margin="5" IsCancel="True"/>
-            <Button Content="Save" Width="80" Margin="5" IsDefault="True" Click="Save_Click"/>
+            <Button Content="Cancel" Width="80" Margin="5" IsCancel="True" Padding="0,5"/>
+            <Button Content="Save" Width="80" Margin="5" IsDefault="True" Click="Save_Click" Padding="0,5"/>
         </StackPanel>
     </Grid>
 </Window>
